--- a/assets/lang/app_en.arb
+++ b/assets/lang/app_en.arb
@@ -1,3 +1,6 @@
 {
-  "appName": "Wallpaper Downloader"
+  "appName": "Wallpaper Downloader",
+  "home": "Home",
+  "search": "Search",
+  "more": "More"
 }
